--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,22 @@
-name: Generate Snake Animation
-
+name: Generate Datas
 on:
-  schedule:
-    - cron: "0 */12 * * *" # Executa a cada 12 horas
-  workflow_dispatch: # Permite acionar manualmente
-
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
+  workflow_dispatch:
 jobs:
   build:
+    name: Jobs to update datas
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4 # Faz o checkout do seu repositório
-      - uses: Platane/snk@v3 # Usa a Action da cobrinha
+      # Snake Animation
+      - uses: Platane/snk@master
+        id: snake-gif
         with:
-          github_user_name: Giovanna-Lanzillotta # Mude para o seu nome de usuário do GitHub
-          outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-            # Adicione mais linhas aqui se quiser outros GIFs ou SVGs
-            # Por exemplo: dist/ocean.gif?palette=ocean
+          github_user_name: Giovanna-Lanzillotta
+          svg_out_path: dist/github-contribution-grid-snake.svg
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
