--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,10 @@ jobs:
         with:
           github_user_name: Giovanna-Lanzillotta
           svg_out_path: dist/github-contribution-grid-snake.svg
+      
+      # Step de depuração
+      - run: ls -l dist
+      
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
