--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,7 @@ jobs:
         id: snake-gif
         with:
           github_user_name: Giovanna-Lanzillotta
-          svg_out_path: dist/github-contribution-grid-snake.svg
-      
-      # Step de depuração
-      - run: ls -l dist
-      
+          outputs: dist/github-contribution-grid-snake.svg  # Linha alterada
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
